--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# Project-specific stuff
+.idea/
+./data/*
+./results/ai-based/*
+./results/rule-based/*
